--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,19 +15,7 @@
 
     <div class="footer-right">
       <p class="mb-0">
-        {% capture _platform %}
-          <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
-        {% endcapture %}
-
-        {% capture _theme %}
-          <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank" rel="noopener">Chirpy</a>
-        {% endcapture %}
-
-        {{ site.data.locales[lang].meta
-          | default: 'NO PLACE LIKE 127.0.0.1'
-          | 
-        }}
-
+        NO PLACE LIKE 127.0.0.1
       </p>
     </div>
 
